Fix duplicating add new playlist option, event listeners for buttons and collapse panels

--- a/app/javascript/components/Ramp.scss
+++ b/app/javascript/components/Ramp.scss
@@ -36,6 +36,7 @@
 .ramp--rails-content {
   margin-top: 10px;
   display: flex;
+  justify-content: space-between;
 
   #shareBtn{
     i {
@@ -44,47 +45,16 @@
     }
   }
 
-  // #administrative_options {
-  //   text-align: right !important;
-  // }
+  .ramp-button-group-1 {
+    display: flex;
+    justify-content: flex-start;
+  }
 
-  // .btn-sm {
-  //   padding: 0 0;
-  // }
+  .ramp-button-group-2 {
+    display: flex;
+    justify-content: flex-end;
+  }
 
-  // .share-tabs {
-  //   flex-grow: 2;
-  // }
-
-  // #share-list {
-  //   margin-left: -17.75rem;
-  // }
-
-  // #playlist-form {
-  //   margin-left: 0;
-  // }
-
-  // .svg-add-to-playlist {
-  //   width: 35px;
-  //   margin: 0;
-  // }
-
-  // .bgColor {
-  //   fill: white;
-  // }
-
-  // #add-to-playlist-btn:hover {
-  //   .bgColor {
-  //     fill: #f2f2f2;
-  //   }
-  // }
-
-  // .foregroundColor {
-  //   fill: none;
-  //   stroke: #2a5459;
-  //   stroke-width: 2;
-  //   stroke-miterlimit: 10;
-  // }
 }
 
 .ramp--supplemental-files {
